updated with lastest changes of operational spec.
